Feat/result processor (#186)
* feat: convert the validation into a result processor that takes in the results of getting a config then returns a processed results. Partially addresses https://github.com/gestalt-config/gestalt/issues/180
feat: to be more consistent rename the PostProcessor to be the ConfigNodeProcessor. Then move it into the processor package.
* feat: convert the validation to a result processor that has its own list of ConfigValidators. If the validation is not enabled, do not add the ValidationResultProcessor.